--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Seite konnte nicht gefunden werden :(</strong></p>
+  <p>Die Seite, die du aufrufen wolltest, konnte nicht gefunden werden. Versuche es erneut oder gehe zur Hauptseite zurück</p>
 </div>
